[tool.poetry]
name = "erbs"
version = "0.1.0"
description = "Enhanced sampling in the representation space of atomistic neural networks."
authors = ["Moritz René Schäfer <schaefer@theochem.uni-stuttgart.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.11"
ase = "^3.22.1"
jax = "^0.4.4"
jraph = "^0.0.6.dev0"
jax-md = "^0.2.5"
flax = "^0.6.4"
scikit-learn = "^1.2.1"
einops = "^0.6.0"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
mkdocs = "^1.4.2"
coverage = {extras = ["toml"], version = "^7.1.0"}
matplotlib = "^3.7.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
