[tool.poetry]
name = "erbs"
version = "0.1.0"
description = "Enhanced sampling in the representation space of atomistic neural networks."
authors = ["Moritz R. Schäfer <schaefer@theochem.uni-stuttgart.de>"]
keywords=["machine-learning", "interatomic potentials", "molecular-dynamics", "enhanced sampling"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.0"
ase = "^3.22.1"
jax = "^0.4.25"
flax = "^0.8.0"
scikit-learn = "^1.3.0"
einops = "^0.6.1"
apax = "^0.9.1"
zntrack = {version = "^0.8.0", optional = true}
ipsuite = "^0.2.1"

[tool.poetry.extras]
zntrack = ["zntrack"]


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
matplotlib = "^3.8.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
