[project]
name = "erbs"
version = "0.1.0"
description = "Enhanced sampling in the representation space of atomistic neural networks."
keywords=["machine-learning", "interatomic potentials", "molecular-dynamics", "enhanced sampling"]
license = "MIT"
authors = [
    { name = "Moritz René Schäfer", email = "schaefer@theochem.uni-stuttgart.de" },
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apax>=0.10.2",
]

[project.urls]
Repository = "https://github.com/apax-hub/erbs"
Releases = "https://github.com/apax-hub/erbs/releases"
Discord = "https://discord.gg/7ncfwhsnm4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "I", "E"]
extend-ignore = [
    "E501", "E731", "E741", "E402", "F841", "F811", "C901", "E203", "E402"
]

